Image Alignment Fix for <figure>

--- a/style.css
+++ b/style.css
@@ -632,7 +632,7 @@ input[type="reset"]:focus {
  *
  * Fluid images for posts, comments, and widgets
  */
-img {
+img, figure {
   max-width: 100%;
   height: auto;
 }
